# devNest

./: .env.test  .gitignore  CLAUDE.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src-tauri/: Cargo.toml  tarpaulin-report.json  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql  0002_pr.sql  0003_search.sql  0004_terminal.sql  0005_notifications.sql  0006_conflicts.sql  0007_embeddings.sql  0008_swarm_notification.sql  0009_swarm_history.sql  0010_approval_queue.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/agile/: flow.rs  kanban.rs  mod.rs  retrospective.rs  sprint_planner.rs  story_map.rs
src-tauri/src/ai/: codegen.rs  context_engine.rs  mod.rs  review_agent.rs
src-tauri/src/analytics/: ai_impact.rs  mod.rs  sprint.rs  velocity.rs
src-tauri/src/api/: methods.rs  mod.rs  socket_server.rs
src-tauri/src/browser/: mod.rs
src-tauri/src/collaboration/: knowledge.rs  mod.rs  team.rs
src-tauri/src/commands/: agile.rs  ai.rs  analytics.rs  approval.rs  browser.rs  collaboration.rs  conflict.rs  doc_mapping.rs  document.rs  file_viewer.rs  github_auth.rs  issue.rs  maintenance.rs  mcp.rs  mod.rs  notifications.rs  polling.rs  pr.rs  project.rs  search.rs  settings.rs  swarm.rs  terminal.rs  util.rs
src-tauri/src/core/: claude_gateway.rs  git_analysis.rs  github_gateway.rs  mod.rs
src-tauri/src/db/: cleanup.rs  conflict.rs  document.rs  issue.rs  migrations.rs  mod.rs  notifications.rs  pr.rs  project.rs  search.rs  terminal.rs
src-tauri/src/doc_mapping/: index.rs  (+5 more)
(+388 files in other folders)
