[package]
name = "devnest"
version = "0.1.0"
description = "DevNest - Project Management Hub"
authors = []
edition = "2021"
default-run = "devnest"

[lib]
name = "devnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "devnest"
path = "src/main.rs"

[[bin]]
name = "devnest-cli"
path = "src/bin/devnest.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "chrono"] }
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures-util = "0.3"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
which = "7"
serde_yaml = "0.9"
dirs = "5"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
wiremock = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
